# korvo2_demo

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.bsp.esp32_s3_korvo_2  sdkconfig.defaults
bsp/esp32_s3_korvo_2/: CMakeLists.txt  esp32_s3_korvo_2.c  idf_component.yml
components/button/: idf_component.yml  iot_button.c
components/esp32-camera/: idf_component.yml
components/esp_codec_dev/: idf_component.yml
components/esp_jpeg/: idf_component.yml
components/esp_lvgl_port/: idf_component.yml
components/esp_lvgl_port/src/lvgl8/: esp_lvgl_port.c  esp_lvgl_port_disp.c
components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port.c
components/io_expander/esp_io_expander/: idf_component.yml
components/io_expander/esp_io_expander_tca9554/: esp_io_expander_tca9554.c  idf_component.yml
components/lcd/esp_lcd_ili9341/: esp_lcd_ili9341.c  idf_component.yml
components/lcd_touch/esp_lcd_touch/: esp_lcd_touch.c  idf_component.yml
components/lcd_touch/esp_lcd_touch_tt21100/: esp_lcd_touch_tt21100.c  idf_component.yml
examples/audio/main/: idf_component.yml
examples/display/main/: display_main.c  idf_component.yml
examples/display_audio_photo/main/: idf_component.yml
examples/display_camera/main/: idf_component.yml
examples/display_lvgl_demos/main/: idf_component.yml
main/: idf_component.yml  lvgl_demo_ui.c
